[gd_scene load_steps=9 format=2]

[ext_resource path="res://resources/theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/Transition/TransitionIn.tscn" type="PackedScene" id=2]
[ext_resource path="res://resources/sprites/logo-game.png" type="Texture" id=3]
[ext_resource path="res://resources/music/drozerix_-_lost_without.mp3" type="AudioStream" id=4]
[ext_resource path="res://scenes/TitleScreen/TitleScreen.gd" type="Script" id=5]
[ext_resource path="res://resources/sprites/title-background.png" type="Texture" id=6]
[ext_resource path="res://resources/sprites/menu-panel.png" type="Texture" id=7]
[ext_resource path="res://scenes/MenuManager/MenuManager.tscn" type="PackedScene" id=8]

[node name="TitleScreen" type="Node2D"]
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [ 128.0 ],
"_edit_vertical_guides_": [ 240.0 ]
}

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 240, 136 )
texture = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 240, 64 )
texture = ExtResource( 3 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
bus = "Music"

[node name="TransitionIn" parent="." instance=ExtResource( 2 )]

[node name="MainMenu" type="CanvasLayer" parent="."]

[node name="NinePatchRect" type="NinePatchRect" parent="MainMenu"]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.0
margin_top = -8.0
margin_right = 48.0
margin_bottom = 72.0
theme = ExtResource( 1 )
texture = ExtResource( 7 )
region_rect = Rect2( 0, 0, 48, 48 )
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/NinePatchRect"]
margin_right = 96.0
margin_bottom = 80.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonStart" type="Button" parent="MainMenu/NinePatchRect/VBoxContainer"]
margin_top = 18.0
margin_right = 96.0
margin_bottom = 30.0
text = "START"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonOptions" type="Button" parent="MainMenu/NinePatchRect/VBoxContainer"]
margin_top = 34.0
margin_right = 96.0
margin_bottom = 46.0
text = "OPTIONS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonQuit" type="Button" parent="MainMenu/NinePatchRect/VBoxContainer"]
margin_top = 50.0
margin_right = 96.0
margin_bottom = 62.0
text = "QUIT"

[node name="MenuManager" parent="." instance=ExtResource( 8 )]
